# codex-transcript-viewer

./: .gitignore  README.md  demo.md  pyproject.toml
docs/: demo.md
src/codex_transcript_viewer/: cli.py  formatting.py  html_builder.py  markdown.py  parser.py  style.css  viewer.js
