[project]
name = "codex-transcript-viewer"
version = "0.1.0"
description = "Convert Codex CLI JSONL session transcripts to self-contained HTML viewers"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
codex-transcript-viewer = "codex_transcript_viewer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_transcript_viewer"]
